	- Added new method for appending text to attributes from a given array.
	- Allow creating attributes when object is instantiated.
	- Small performance improvements.


* hashover/scripts/htmloutput.php

	- Reduced code base size by ~12.1%
	- Small performance improvements.


* hashover/api/rss.php

	- Code tags are now converted to pre tags to ensure proper whitespace.


* Added "Status" locale string to all locales.
* Added code to check for PHP extensions HashOver depends on.
* Added error messages for missing PHP extensions.
* Added language specific reusable code for generating error messages.
* Removed CSS class `hashover-edit` in favor of `hashover-comment-edit`.
* Renamed CSS class `hashover-count-sort` to `hashover-sort-count`.
* Improved support for multiple line ending styles in comment files.
* Improved JSON data format support.
* Minor locale improvements.
* Small code improvements.


Changes by Jacob Barkdull 2016-01-05
--------------------------------------------------------------------------------
* hashover/scripts/javascript-mode.php

	- Updated Copyright year.
	- Small code changes.


* Added: Danish translation by Jacob Moen.
* Merged: Further improvements to German locale.
* Changed "Be the first to comment!" to "No comments yet." in all locales.
* Now hiding unused comment text of "No comments yet." notice.


Changes by Jacob Barkdull 2016-01-02
--------------------------------------------------------------------------------
* Merged: New public `$setCookies` setting for enabling and disabling cookies.
* Merged: Improvements to German locale.


Changes by Jacob Barkdull 2016-12-03
--------------------------------------------------------------------------------
* Now using MCRYPT_DEV_URANDOM instead of MCRYPT_RAND.
* Small CSS changes.


Changes by Jacob Barkdull 2016-10-28
--------------------------------------------------------------------------------
* Added loading indicator to embedded images.